06.k8s/web-app/01.namespaces.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: stage
  name: stage
spec:
  finalizers:
  - kubernetes
status:
  phase: Active

---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: prod
  name: stage
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
